Revision history for MySQL-ORM

=======
0.15    - Added a db attribute to the table classes in order to maintain a link
          back to the orm class. Mainly useful in CustomRoles which want to make
          use of methods defined in other CustomRoles on different tables.
        - Fixed selectx method generation to handle self referencing tables.
          Current solution was to not support selectx fetching the parent table
          attributes when the parent table == current table.

0.14    - Added dbh clone disconnect on destroy logic to avoid warning messages
          if the clone was created while autocommit was off or a transaction
          was open.

0.13    - added --no-fq-table-names option

0.12	- added an additional primary key check to avoid errors when primary 
		  key does not exist.
	 	  
0.11	- improved selectx to handle order by ASC vs DESC

0.10    - improved MySQL::ORM::Generate::Class::ResultClassX::generate() to better handle null columns in selectx 

0.09    - reverted uniq columns feature added in 0.07

0.08	- fixed bug with get_id() method sig generation
		- added -o option to cli
		
0.07	- squelched perltidy noise
		- made uniq columns as required in insert methods
		
0.06 	Update by_param to private _by_param

0.05	fixed signatures for nullable foreign keys in the selectx methods

0.04    skip pre-existing Dbname.pm files

0.03	removed extraneous tmp dir

0.02	fixed bug in lib/MySQL/ORM.pm

0.01    Date/time
        First version, released on an unsuspecting world.
